--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:QMU6H/9vgMqxu6cnxBFBgP7+SjPPPle5cCba2qxX53U=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/pizzaria
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -24,7 +24,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pizzaria
-DB_USERNAME=
+DB_USERNAME=root
 DB_PASSWORD=
 
 SESSION_DRIVER=database
